--- a/ThreadAStar/ThreadAStar2008.csproj
+++ b/ThreadAStar/ThreadAStar2008.csproj
@@ -49,26 +49,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmParallelAStar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmParallelAStar.Designer.cs">
+      <DependentUpon>FrmParallelAStar.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\IComputable.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\MatrixMultiply.cs" />
     <Compile Include="Model\ThreadMonitor.cs" />
-    <Compile Include="Model\ThreadData.cs" />
     <Compile Include="Model\ThreadEntity.cs" />
+    <Compile Include="ThreadManager\IThreadManager.cs" />
     <Compile Include="ThreadManager\ThreadManagerDotNet4.cs" />
     <Compile Include="ThreadManager\ThreadManagerSimple.cs" />
     <Compile Include="Model\TimelineData.cs" />
     <Compile Include="Model\TypeThreading.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmParallelAStar.resx">
+      <DependentUpon>FrmParallelAStar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
