--- a/ThreadAStar/ThreadAStar2010.csproj
+++ b/ThreadAStar/ThreadAStar2010.csproj
@@ -100,6 +100,9 @@
     <Compile Include="Threading\BackGroundWorkerMethod.cs" />
     <Compile Include="Threading\ThreadingBaseMethod.cs" />
     <Compile Include="Threading\ThreadingNativeMethod.cs" />
+    <Compile Include="UC\ThreadSafeLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UC\UCMonitoring.cs">
       <SubType>UserControl</SubType>
     </Compile>
