--- a/ThreadAStar/ThreadAStar2010.csproj
+++ b/ThreadAStar/ThreadAStar2010.csproj
@@ -65,9 +65,10 @@
     <Compile Include="Model\MatrixMultiply.cs" />
     <Compile Include="Model\ThreadMonitor.cs" />
     <Compile Include="Model\ThreadEntity.cs" />
+    <Compile Include="ThreadManager\ThreadManagerNative.cs" />
     <Compile Include="ThreadManager\ThreadManagerBase.cs" />
     <Compile Include="ThreadManager\ThreadManagerTPL.cs" />
-    <Compile Include="ThreadManager\ThreadManagerSimple.cs" />
+    <Compile Include="ThreadManager\ThreadManagerBackgroundWorker.cs" />
     <Compile Include="Model\TimelineData.cs" />
     <Compile Include="Model\TypeThreading.cs" />
     <Compile Include="Program.cs" />
@@ -97,9 +98,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Threading\BackGroundWorkerMethod.cs" />
-    <Compile Include="Threading\ThreadingBaseMethod.cs" />
-    <Compile Include="Threading\ThreadingNativeMethod.cs" />
+    <Compile Include="ThreadingMethod\ThreadingBackgroundWorkerMethod.cs" />
+    <Compile Include="ThreadingMethod\ThreadingBaseMethod.cs" />
+    <Compile Include="ThreadingMethod\ThreadingNativeMethod.cs" />
     <Compile Include="UC\ThreadSafeLabel.cs">
       <SubType>Component</SubType>
     </Compile>
