--- a/ThreadAStar/ThreadAStar2010.csproj
+++ b/ThreadAStar/ThreadAStar2010.csproj
@@ -60,11 +60,11 @@
     <Compile Include="FrmParallelAStar.Designer.cs">
       <DependentUpon>FrmParallelAStar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\ComputableEventArgs.cs" />
     <Compile Include="Model\IComputable.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\MatrixMultiply.cs" />
     <Compile Include="Model\ThreadMonitor.cs" />
-    <Compile Include="Model\ThreadEntity.cs" />
     <Compile Include="ThreadManager\ThreadManagerNative.cs" />
     <Compile Include="ThreadManager\ThreadManagerBase.cs" />
     <Compile Include="ThreadManager\ThreadManagerTPL.cs" />
