--- a/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
+++ b/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
@@ -108,12 +108,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cell.cs" />
-    <Compile Include="Map.cs" />
+    <Compile Include="Logic\Gameplay\GamePlayLogic.cs" />
+    <Compile Include="Logic\Controller\ControllerLogic.cs" />
+    <Compile Include="Model\Cell.cs" />
+    <Compile Include="Model\Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
-    <Compile Include="Render.cs" />
+    <Compile Include="GameEngine.cs" />
+    <Compile Include="Logic\Render\RenderLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -151,6 +153,10 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Logic\Network\" />
+    <Folder Include="Logic\Sound\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
