--- a/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
+++ b/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
@@ -94,6 +94,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -108,6 +109,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Context.cs" />
     <Compile Include="Common\Extension.cs" />
     <Compile Include="Common\Tools.cs" />
     <Compile Include="Logic\Controller\KeyManager.cs" />
