--- a/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
+++ b/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
@@ -112,12 +112,18 @@
     <Compile Include="Common\Context.cs" />
     <Compile Include="Common\Extension.cs" />
     <Compile Include="Common\Tools.cs" />
+    <Compile Include="Logic\AI\AStarCell.cs" />
+    <Compile Include="Logic\AI\PathFinding.cs" />
     <Compile Include="Logic\Controller\KeyManager.cs" />
     <Compile Include="Logic\Controller\MouseManager.cs" />
     <Compile Include="Logic\Gameplay\GamePlayLogic.cs" />
     <Compile Include="Logic\Controller\ControllerLogic.cs" />
     <Compile Include="Model\Cell.cs" />
     <Compile Include="Model\Map.cs" />
+    <Compile Include="Model\Minion\Inspector.cs" />
+    <Compile Include="Model\Minion\MinionBase.cs" />
+    <Compile Include="Model\Minion\Phant.cs" />
+    <Compile Include="Model\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameEngine.cs" />
