--- a/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
+++ b/NewFlowar/NewFlowar/NewFlowar/NewFlowar.csproj
@@ -90,6 +90,12 @@
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
+    <Reference Include="SkinnedModel">
+      <HintPath>..\Lib\SkinnedModel.dll</HintPath>
+    </Reference>
+    <Reference Include="SkinnedModelPipeline">
+      <HintPath>..\Lib\SkinnedModelPipeline.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
@@ -123,6 +129,7 @@
     <Compile Include="Model\Minion\Inspector.cs" />
     <Compile Include="Model\Minion\MinionBase.cs" />
     <Compile Include="Model\Minion\Phant.cs" />
+    <Compile Include="Model\Minion\Robot.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
