--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Logic\Controller\MouseManager.cs" />
     <Compile Include="Logic\Gameplay\GamePlayLogic.cs" />
     <Compile Include="Logic\Controller\ControllerLogic.cs" />
+    <Compile Include="Logic\Render\MeshHexa.cs" />
     <Compile Include="Model\Cell.cs" />
     <Compile Include="Model\Channel.cs" />
     <Compile Include="Model\Clip.cs" />
