--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -127,6 +127,8 @@
     <Compile Include="Model\Instrument\InstrumentEffect.cs" />
     <Compile Include="Model\Instrument\InstrumentSample.cs" />
     <Compile Include="Model\Map.cs" />
+    <Compile Include="Model\Menu\Item.cs" />
+    <Compile Include="Model\Menu\Menu.cs" />
     <Compile Include="Model\Musician.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\Sample.cs" />
