--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Model\Musician.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\Sample.cs" />
+    <Compile Include="Model\TimeValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameEngine.cs" />
