--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -40,7 +40,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\x86\Debug</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE;DEBUG;WINDOWS,DEBUGON</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -53,7 +53,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\x86\Release</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE;WINDOWS,DEBUGON</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Compile Include="Common\Context.cs" />
     <Compile Include="Common\Extension.cs" />
+    <Compile Include="Common\FileSystem.cs" />
     <Compile Include="Common\Tools.cs" />
     <Compile Include="Logic\Controller\KeyManager.cs" />
     <Compile Include="Logic\Controller\MouseManager.cs" />
