--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -113,6 +113,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ClickableImage.cs" />
+    <Compile Include="Common\ClickableText.cs" />
     <Compile Include="Common\Context.cs" />
     <Compile Include="Common\Extension.cs" />
     <Compile Include="Common\FileSystem.cs" />
@@ -122,6 +124,7 @@
     <Compile Include="Logic\Gameplay\GamePlayLogic.cs" />
     <Compile Include="Logic\Controller\ControllerLogic.cs" />
     <Compile Include="Logic\Render\MeshHexa.cs" />
+    <Compile Include="Logic\UI\UILogic.cs" />
     <Compile Include="Model\Cell.cs" />
     <Compile Include="Model\Channel.cs" />
     <Compile Include="Model\Clip.cs" />
@@ -132,13 +135,16 @@
     <Compile Include="Model\Instrument\InstrumentEffect.cs" />
     <Compile Include="Model\Instrument\InstrumentSample.cs" />
     <Compile Include="Model\Map.cs" />
-    <Compile Include="Model\Menu\Item.cs" />
-    <Compile Include="Model\Menu\Menu.cs" />
-    <Compile Include="Model\Menu\MenuState.cs" />
+    <Compile Include="Model\UI\Menu\Item.cs" />
+    <Compile Include="Model\UI\Menu\Menu.cs" />
+    <Compile Include="Model\UI\Menu\MenuState.cs" />
     <Compile Include="Model\Musician.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="Model\Sample.cs" />
     <Compile Include="Model\TimeValue.cs" />
+    <Compile Include="Model\UI\Partition.cs" />
+    <Compile Include="Model\UI\Ribbon.cs" />
+    <Compile Include="Model\UI\UIComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameEngine.cs" />
