--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Model\Instrument\InstrumentSample.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\TypePlaying.cs" />
+    <Compile Include="Model\UI\ListFile.cs" />
     <Compile Include="Model\UI\Menu\Item.cs" />
     <Compile Include="Model\UI\Menu\Menu.cs" />
     <Compile Include="Model\UI\Menu\MenuState.cs" />
