--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\TypePlaying.cs" />
     <Compile Include="Model\UI\ListFile.cs" />
+    <Compile Include="Model\UI\ListLibrary.cs" />
     <Compile Include="Model\UI\Menu\Item.cs" />
     <Compile Include="Model\UI\Menu\Menu.cs" />
     <Compile Include="Model\UI\Menu\MenuState.cs" />
