--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -94,6 +94,10 @@
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
+    <Reference Include="NAudio, Version=1.3.8.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
@@ -124,6 +128,7 @@
     <Compile Include="Logic\Gameplay\GamePlayLogic.cs" />
     <Compile Include="Logic\Controller\ControllerLogic.cs" />
     <Compile Include="Logic\Render\MeshHexa.cs" />
+    <Compile Include="Logic\Sound\SoundLogic.cs" />
     <Compile Include="Logic\UI\UILogic.cs" />
     <Compile Include="Model\Cell.cs" />
     <Compile Include="Model\Channel.cs" />
@@ -136,6 +141,7 @@
     <Compile Include="Model\Instrument\InstrumentSample.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\TypePlaying.cs" />
+    <Compile Include="Model\UI\ListSample.cs" />
     <Compile Include="Model\UI\ListFile.cs" />
     <Compile Include="Model\UI\ListLibrary.cs" />
     <Compile Include="Model\UI\Menu\Item.cs" />
@@ -156,6 +162,7 @@
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
+    <Content Include="NAudio.dll" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TheGridContent\TheGridContent.contentproj">
@@ -193,7 +200,6 @@
   <ItemGroup>
     <Folder Include="Logic\AI\" />
     <Folder Include="Logic\Network\" />
-    <Folder Include="Logic\Sound\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
