--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -67,6 +67,9 @@
     <Reference Include="irrKlang.NET4">
       <HintPath>..\Lib\irrKlang.NET4.dll</HintPath>
     </Reference>
+    <Reference Include="JSNet">
+      <HintPath>..\Lib\JSNet.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -137,6 +140,8 @@
     <Compile Include="Model\Channel.cs" />
     <Compile Include="Model\Clip.cs" />
     <Compile Include="Model\EffectType.cs" />
+    <Compile Include="Model\Effect\ChannelEffect.cs" />
+    <Compile Include="Model\Effect\EffectProperty.cs" />
     <Compile Include="Model\Instrument\InstrumentStart.cs" />
     <Compile Include="Model\Instrument\InstrumentStop.cs" />
     <Compile Include="Model\Instrument\InstrumentBase.cs" />
