--- a/TheGrid/TheGrid/Lib/JSNet/JSNet.csproj
+++ b/TheGrid/TheGrid/Lib/JSNet/JSNet.csproj
@@ -44,9 +44,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NAudio, Version=1.2.144.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\NAudio\NAudio.dll</HintPath>
+    <Reference Include="NAudio">
+      <HintPath>..\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition, Version=2008.11.24.0, Culture=neutral, processorArchitecture=MSIL">
