--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -143,6 +143,8 @@
     <Compile Include="Model\Instrument\InstrumentSample.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\TypePlaying.cs" />
+    <Compile Include="Model\UI\Effect\EffectPanel.cs" />
+    <Compile Include="Model\UI\Effect\EffectPropertyChanger.cs" />
     <Compile Include="Model\UI\ListSample.cs" />
     <Compile Include="Model\UI\ListFile.cs" />
     <Compile Include="Model\UI\ListLibrary.cs" />
