--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Model\Instrument\InstrumentSample.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\TypePlaying.cs" />
+    <Compile Include="Model\UI\BPMMeter.cs" />
     <Compile Include="Model\UI\Effect\EffectPanel.cs" />
     <Compile Include="Model\UI\Effect\EffectPropertyChanger.cs" />
     <Compile Include="Model\UI\ListSample.cs" />
