--- a/TheGrid/TheGrid/TheGrid/TheGrid.csproj
+++ b/TheGrid/TheGrid/TheGrid/TheGrid.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Model\UI\BPMMeter.cs" />
     <Compile Include="Model\UI\Effect\EffectPanel.cs" />
     <Compile Include="Model\UI\Effect\EffectPropertyChanger.cs" />
+    <Compile Include="Model\UI\ListBase.cs" />
     <Compile Include="Model\UI\ListSample.cs" />
     <Compile Include="Model\UI\ListFile.cs" />
     <Compile Include="Model\UI\ListLibrary.cs" />
