--- a/MeeplzAndroid/.project
+++ b/MeeplzAndroid/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Meeplz-android</name>
+	<name>meePLZ-android</name>
 	<comment></comment>
 	<projects>
 	</projects>
