--- a/MeeplzAndroid/AndroidManifest.xml
+++ b/MeeplzAndroid/AndroidManifest.xml
@@ -19,7 +19,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="meeplz.android.MeeplzAndroid"
+        <activity android:name="meeplz.android.GameStarterAndroid"
                   android:label="@string/app_name"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
