--- a/twiPLZ/.classpath
+++ b/twiPLZ/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx-openal"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx-backend-jogl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tablelayout-libgdx"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tablelayout"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
