--- a/twiPLZ/.project
+++ b/twiPLZ/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/data</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/twiPLZAndroid/assets/data</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
