--- a/twiPLZAndroid/.classpath
+++ b/twiPLZAndroid/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="libs/gdx-sources.jar"/>
 	<classpathentry kind="lib" path="libs/gdx.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-backend-android.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
